--- a/Spam_classifier.ipynb
+++ b/Spam_classifier.ipynb
@@ -32,7 +32,7 @@
         "id": "SdBQR5k4Oe21"
       },
       "source": [
-        "# Naive Bayes (the easy way)"
+        "# Spam Classifier "
       ]
     },
     {
@@ -41,7 +41,7 @@
         "id": "QE7f7U6GOe25"
       },
       "source": [
-        "We'll cheat by using sklearn.naive_bayes to train a spam classifier! Most of the code is just loading our training data into a pandas DataFrame that we can play with:"
+        "We'll using sklearn.naive_bayes to train a spam classifier! Most of the code is just loading our training data into a pandas DataFrame that we can play with:"
       ]
     },
     {
