--- a/Spam_classifier.ipynb
+++ b/Spam_classifier.ipynb
@@ -86,8 +86,8 @@
         "\n",
         "data = DataFrame({'message': [], 'class': []})\n",
         "\n",
-        "data = data.append(dataFrameFromDirectory('e:/sundog-consult/Udemy/DataScience/emails/spam', 'spam'))\n",
-        "data = data.append(dataFrameFromDirectory('e:/sundog-consult/Udemy/DataScience/emails/ham', 'ham'))\n"
+        "data = data.append(dataFrameFromDirectory('/emails/spam', 'spam'))\n",
+        "data = data.append(dataFrameFromDirectory('/emails/ham', 'ham'))\n"
       ],
       "execution_count": null,
       "outputs": []
